ifcc-test-output/testfiles-7_2declarations/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: redefinition of ‘a’
    3 |     int a =3;
      |         ^
input.c:2:9: note: previous definition of ‘a’ with type ‘int’
    2 |     int a =2;
      |         ^

exit status: 1
